Fix overflow in auto in the css

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -188,7 +188,7 @@ main {
 	animation-duration: var(--modal-duration);
 	background: #232323;
 	border-radius: 10px;
-	overflow: hidden;
+	overflow: auto;
 	position: relative;
 	color: #fff;
 	padding-top: 10px;
